# Fermats-last-theorem

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
courseWork/: .env  asgi.py  settings.py  urls.py  wsgi.py
env/Scripts/: activate  activate.bat
main/: admin.py  apps.py  forms.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_delete_profile.py  0003_initial.py  0004_remove_question_test_delete_choice_delete_question_and_more.py  0005_initial.py  0006_quizresult.py  0007_delete_quizresult.py  0008_quizresult.py  0009_alter_answer_options_alter_question_options_and_more.py
main/templates/: 404.html  base.html  footer.html  header.html  login.html  personal.html  register.html
main/templates/admin/: base_site.html
main/templates/pages/: crammer.html  determinant.html  gauss.html  index.html  iterative.html  matrixlaws.html  newton.html  numericMethods.html  quiz.html  results.html
main/templates/partials/: it_table.html  results_cramer.html  results_determinant.html  results_iterative.html  results_newton.html  simple_table.html  table.html
static/css/: footer.css  login.css  quiz.css  style.css
